--- a/Recommendation systems/Recommender Systems with Python.ipynb
+++ b/Recommendation systems/Recommender Systems with Python.ipynb
@@ -8,7 +8,8 @@
     "___\n",
     "# Recommender Systems with Python\n",
     "\n",
-    "Source: https://github.com/krishnaik06/Movie-Recommender-in-python"
+    "source: https://github.com/krishnaik06/Movie-Recommender-in-python\n",
+    "\n",
     "Welcome to the code notebook for Recommender Systems with Python. In this lecture we will develop basic recommendation systems using Python and pandas.\n",
     "\n",
     "In this notebook, we will focus on providing a basic recommendation system by suggesting items that are most similar to a particular item, in this case, movies. Keep in mind, this is not a true robust recommendation system, to describe it more accurately,it just tells you what movies/items are most similar to your movie choice.\n",
@@ -1601,7 +1602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
